--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,13 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //firebase
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
